@@ -1,3 +1,4 @@
+12/27/12 move visibility changes into model game-state observer
 12/27/12 move title creation to ChallengeNode base class
 12/27/12 fix: call IChallenge.setAnswerVisible when "Next" button is visible, so that point tools see the answer line
 12/27/12 standardize order of lines that are provided to point tool
